@@ -10,6 +10,7 @@
   * Search the cache for all adjacent -r/-R options in a single loop.  (Speeds up command lines like nget -Gfoo -r bar -r baz -r boo. (options -h/-G/-g/-@ split -r chains.))
   * For -G .. -r .. search as reading rather than loading cache into memory and then searching.  (Speed up and memory usage reduction.)
   * Actually honor -c option again.  (Case sensitive matches)
+  * Update configure --with-*=DIR options, now searches in both DIR and DIR/{include,lib}.  Also adds --with-*-{include,lib}=DIR to force specific locations for each.
 
 2002-05-17 v0.18.2:
   * Work around exception handling segfaults with older versions of gcc by not using multiple inheritance in exception classes. (reported by Waldemar la Tendresse)
